[package]
name = "btc-ticker"
version = "0.1.0"
edition = "2021"
authors = ["Nick"]
description = "A tray application for Bitcoin metrics"

[dependencies]
tray-icon = "0.21.0"
tao = "0.34.0"
image = "0.25.5"

# For cross-platform event handling
crossbeam-channel = "0.5"

# For HTTP requests
reqwest = { version = "0.12.20", features = ["blocking", "json"] }

# For JSON parsing
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# For error handling
anyhow = "1.0"

# GUI dependencies
eframe = "0.31.0" # egui framework wrapper
egui = "0.31.0"  # immediate mode GUI library
egui_plot = "0.32.1" # For plotting charts

# For time formatting
chrono = "0.4"

# MacOS-specific dependencies
[target."cfg(target_os = \"macos\")".dependencies]
objc2 = "0.6"
objc2-core-foundation = "0.3"

[target."cfg(target_os = \"linux\")".dependencies]
gtk = "0.18.0"
